@@ -2,6 +2,8 @@
   * When doing the full matrix testing with python >=2.6, we
     activate the deprecation warnings (py3k).
   * Split dependencies in the Replication testsuite.
+  * Help the Gargabe Collection freeing resources when the
+    replication testsuite is completed.
   * Patches ported from Python:
     * Memory leaks: #7808 - http://bugs.python.org/issue7808 - Florent Xicluna
     * 
